zero-trust-gitops-platform/policies/tests/default-deny-networkpolicy/generated-resource.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: demo-api
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
